@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Merged: Merge changes r6064- r6076 from the trunk. (windmillway)
  - Cleaned up "View" Census Header text and associated tooltip text. (windmillway)
  - Added: CA "Templates" for USA for years (1900, 1890, 1880, 1870, 1860 and 1850), also used Nigels latest css values (modified a bit) (windmillway)
  - Added: Notes Input field, also if the Notes, Enumeration, or Locality fields are empty, the line is completely removed in the Shared note. (windmillway)
@@ -141,6 +142,7 @@ Version 4.2.x CA
  - Changed: Census Assistant Shared Note delimiter from ";" to "|" (windmillway)
 
 Version 4.2.3
+ - Update: Updated readme.txt to highlight the necessity for PDO/mysql (windmillway)
  - Added: New statistics (wooc)
  - Fixed: [ 2833809 ] Cannot empty all the clipping cart (canajun2eh)
 
